# project1

Project1_Starter_Code/: Add.h  Automaton.h  CMakeLists.txt  ColonAutomaton.cpp  ColonAutomaton.h  CommaAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Facts.cpp  Facts.h  Header.cpp  Header.h  Interpreter.cpp  Interpreter.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  Multiply.cpp  Multiply.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.cpp  Predicate.h  Queries.h  Relation.cpp  Relation.h  RightParen.cpp  RightParen.h  Rule.cpp  Rule.h  Rules.cpp  Schemes.cpp  Schemes.h  (+11 more)
Project1_Starter_Code/Project2/: Add.cpp  CommaAutomaton.cpp  DatalogProgram.h  IDAutomaton.cpp  IDAutomaton.h  Lexer.cpp  Parser.cpp  Parser.h  Predicate.cpp  Q_MarkAutomaton.cpp  Q_MarkAutomaton.h  Queries.cpp  Rule.cpp  Rule.h  Rules.h  commentAutomaton.cpp  commentAutomaton.h  main.cpp  undefinedAutomaton.h
Project1_Starter_Code/lab1.dSYM/Contents/Resources/DWARF/: lab1
Project1_Starter_Code/lab2.dSYM/Contents/Resources/DWARF/: lab2
